# u4u_util

./: .gitignore  Pipfile  README.md  pyproject.toml
Utils/: SFTPFunc.py  alerts.py  civisFunc.py  gbq.py  s3Ops.py  secrets.py  transferDBs3.py
Utils/logging/: logging.py
Utils/slack_alerts/: README.md  base.py  config.py
Utils/slack_alerts/tests/: test_base.py
src/: CivisFunc.py  SFTPFunc.py  s3Ops.py  transferDBs3.py
tests/: test_secrets.py
